<resources>
    <string name="app_name">Calculator</string>
    <string name="num7">7</string>
    <string name="num8">8</string>
    <string name="equ">=</string>
    <string name="ad">+</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_1">1</string>
    <string name="_6">6</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="Divide">/</string>
    <string name="Rem">%</string>
    <string name="mult">*</string>
    <string name="minus">-</string>
    <string name="sqr">√</string>
    <string name="open">open</string>
    <string name="close">close</string>

    <string name="Clr">C</string>
    <string name="sqrt">√</string>
    <string name="pie">π</string>
    <string name="log">log</string>
    <string name="ln">ln</string>
    <string name="n">n!</string>
    <string name="dot">.</string>
    <string name="plus">+</string>
    <string name="multi">*</string>
    <string name="min">-</string>
    <string name="del">DEL</string>
    <string name="ac">AC</string>
    <string name="sin">sin</string>
    <string name="closebr">)</string>
    <string name="tan">tan</string>
    <string name="cosec">cosec</string>
    <string name="rad">RAD</string>
    <string name="shift">Shift</string>
    <string name="sec">sec</string>
    <string name="x_y">x^y</string>
    <string name="sepr">,</string>
    <string name="_1_x">1/X</string>
    <string name="x3">x3</string>
    <string name="x2">x2</string>
    <string name="cot">cot</string>
    <string name="openbr">(</string>
    <string name="cos">cos</string>
    <string name="division">÷</string>
    <string name="exp">EXP</string>
    <string name="ans">ANS</string>
    <string name="eq">=</string>

    <string-array name="Curren">
        <item
            >USD</item>
        <item >EUR</item>
        <item >INR</item>
    </string-array>


</resources>
