<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawercur"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CurrencyConversion">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <EditText
            android:id="@+id/et1"
            android:layout_width="131dp"
            android:layout_height="55dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="4dp"
             />

        <TextView
            android:id="@+id/Rate"
            android:layout_width="129dp"
            android:layout_height="58dp"

            android:layout_below="@+id/et1"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="4dp" />

        <Spinner
            android:id="@+id/spinfrom"
            android:layout_width="201dp"
            android:layout_height="53dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="6dp"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="18dp"
            android:layout_toStartOf="@+id/et1" />

        <Spinner
            android:id="@+id/spinto"
            android:layout_width="251dp"
            android:layout_height="59dp"
            android:layout_below="@+id/spinfrom"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="18dp"
            android:layout_toStartOf="@+id/Rate" />

        <Button
            android:id="@+id/c7"
            android:layout_width="72dp"
            android:layout_height="66dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="12dp"
            android:layout_marginTop="257dp"
            android:background="@drawable/circle_button"
            android:padding="10dp"
            android:paddingLeft="30dp"
            android:paddingTop="10dp"
            android:paddingRight="30dp"
            android:paddingBottom="10dp"
            android:text="@string/_7"
            android:textAllCaps="false"
            android:textColor="?attr/textcolor"
            android:textSize="20sp" />

        <Button
            android:id="@+id/c8"
            android:layout_width="72dp"
            android:layout_height="66dp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="257dp"
            android:layout_toEndOf="@+id/c7"
            android:background="@drawable/circle_button"
            android:text="@string/_8"
            android:padding="10dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:textAllCaps="false"
            android:textColor="?attr/textcolor"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/c9"
            android:layout_width="72dp"
            android:layout_height="66dp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="11dp"
            android:layout_marginTop="257dp"
            android:layout_marginEnd="89dp"
            android:layout_toEndOf="@+id/c8"
            android:background="@drawable/circle_button"
            android:padding="10dp"
            android:paddingLeft="30dp"
            android:paddingTop="10dp"
            android:paddingRight="30dp"
            android:paddingBottom="10dp"
            android:text="@string/_9"
            android:textAllCaps="false"
            android:textColor="?attr/textcolor"
            android:textSize="20sp" />

        <Button
            android:id="@+id/cAC"
            android:layout_width="wrap_content"
            android:layout_height="173dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="257dp"
            android:layout_marginEnd="3dp"
            android:background="@drawable/round_corn"
            android:text="AC"
            android:textColor="#FD1C3E"
            android:textSize="30sp" />

        <Button
            android:id="@+id/c4"
            android:layout_width="72dp"
            android:layout_height="66dp"
            android:layout_below="@+id/c7"
            android:layout_alignParentStart="true"
            android:layout_marginStart="12dp"
            android:layout_marginTop="36dp"
            android:background="@drawable/circle_button"
            android:padding="10dp"
            android:paddingLeft="30dp"
            android:paddingTop="10dp"
            android:paddingRight="30dp"
            android:paddingBottom="10dp"
            android:text="@string/_4"
            android:textAllCaps="false"
            android:textColor="?attr/textcolor"
            android:textSize="20sp" />

        <Button
            android:id="@+id/c5"
            android:layout_width="72dp"
            android:layout_height="66dp"
            android:layout_below="@+id/c8"
            android:layout_marginStart="16dp"
            android:layout_marginTop="36dp"
            android:layout_toEndOf="@+id/c4"
            android:background="@drawable/circle_button"
            android:padding="10dp"
            android:paddingLeft="30dp"
            android:paddingTop="10dp"
            android:paddingRight="30dp"
            android:paddingBottom="10dp"
            android:text="@string/_5"
            android:textAllCaps="false"
            android:textColor="?attr/textcolor"
            android:textSize="20sp" />

        <Button
            android:id="@+id/c6"
            android:layout_width="72dp"
            android:layout_height="66dp"
            android:layout_below="@+id/c9"
            android:layout_marginStart="16dp"
            android:layout_marginTop="36dp"
            android:layout_toEndOf="@+id/c5"
            android:background="@drawable/circle_button"
            android:padding="10dp"
            android:paddingLeft="30dp"
            android:paddingTop="10dp"
            android:paddingRight="30dp"
            android:paddingBottom="10dp"
            android:text="@string/_6"
            android:textAllCaps="false"
            android:textColor="?attr/textcolor"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/cimgbtn"
            android:layout_width="82dp"
            android:layout_height="177dp"
            android:layout_below="@+id/cAC"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="25dp"
            android:background="@drawable/round_corn"
            app:srcCompat="@drawable/ic_backspace_black_24dp" />

        <Button
            android:id="@+id/c1"
            android:layout_width="72dp"
            android:layout_height="66dp"
            android:layout_below="@+id/c4"
            android:layout_alignParentStart="true"
            android:layout_marginStart="12dp"
            android:layout_marginTop="36dp"
            android:background="@drawable/circle_button"
            android:padding="10dp"
            android:paddingLeft="30dp"
            android:paddingTop="10dp"
            android:paddingRight="30dp"
            android:paddingBottom="10dp"
            android:text="@string/_1"
            android:textAllCaps="false"
            android:textColor="?attr/textcolor"
            android:textSize="20sp" />

        <Button
            android:id="@+id/c2"
            android:layout_width="72dp"
            android:layout_height="66dp"
            android:layout_below="@+id/c5"
            android:layout_marginStart="16dp"
            android:layout_marginTop="36dp"
            android:layout_toEndOf="@+id/c1"
            android:background="@drawable/circle_button"
            android:padding="10dp"
            android:paddingLeft="30dp"
            android:paddingTop="10dp"
            android:paddingRight="30dp"
            android:paddingBottom="10dp"
            android:text="@string/_2"
            android:textAllCaps="false"
            android:textColor="?attr/textcolor"
            android:textSize="20sp" />

        <Button
            android:id="@+id/c3"
            android:layout_width="72dp"
            android:layout_height="66dp"
            android:layout_below="@+id/c6"
            android:layout_marginStart="16dp"
            android:layout_marginTop="36dp"
            android:layout_toEndOf="@+id/c2"
            android:background="@drawable/circle_button"
            android:padding="10dp"
            android:paddingLeft="30dp"
            android:paddingTop="10dp"
            android:paddingRight="30dp"
            android:paddingBottom="10dp"
            android:text="@string/_3"
            android:textAllCaps="false"
            android:textColor="?attr/textcolor"
            android:textSize="20sp" />

        <Button
            android:id="@+id/c0"
            android:layout_width="158dp"
            android:layout_height="66dp"
            android:layout_below="@+id/c1"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="12dp"
            android:layout_marginTop="37dp"
            android:layout_marginBottom="28dp"
            android:background="@drawable/circle_button"
            android:padding="10dp"
            android:paddingLeft="30dp"
            android:paddingTop="10dp"
            android:paddingRight="30dp"
            android:paddingBottom="10dp"
            android:text="@string/_0"
            android:textAllCaps="false"
            android:textColor="?attr/textcolor"
            android:textSize="20sp" />

        <Button
            android:id="@+id/cdot"
            android:layout_width="73dp"
            android:layout_height="58dp"
            android:layout_below="@+id/c3"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="29dp"
            android:layout_marginBottom="25dp"
            android:layout_toEndOf="@+id/c0"
            android:background="@drawable/circle_button"
            android:padding="10dp"
            android:paddingLeft="30dp"
            android:paddingTop="10dp"
            android:paddingRight="30dp"
            android:paddingBottom="10dp"
            android:text="."
            android:textAllCaps="false"
            android:textColor="?attr/textcolor"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/value"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_below="@+id/Rate"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="233dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="6dp" />


    </RelativeLayout>
    <android.support.design.widget.NavigationView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        app:menu="@menu/nav_menu"
        app:itemTextColor="?attr/edittext"
        android:id="@+id/navigation_view"
        android:background="?attr/backgroundcolor"
        android:layout_gravity="start"
        ></android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>